I added hero section.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,44 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/myStyles.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="hero">
+        <div class="menu">
+          <img id="logo" src="./images/logo.png" alt="Git Logo" />
+          <ul>
+            <li><a>Why Git?</a></li>
+            <li><a>About</a></li>
+            <li><a>References</a></li>
+            <li class="down"><a>Download</a></li>
+          </ul>
+        </div>
+
+        <div class="middle">
+          <h1 id="headline">
+            The right Version Control System for 21st century
+          </h1>
+          <h2 id="subheadline">
+            Git is a free and open source distributed version control system
+            designed to handle everything from small to very large projects with
+            speed and efficiency.
+          </h2>
+          <button class="download">Download</button>
+        </div>
+        <img
+          id="heroIll"
+          src="./images/hero.png"
+          alt="Version Control System Illustration"
+        />
+      </div>
+    </div>
+  </body>
 </html>
