I added Features section.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/myStyles.css" />
@@ -41,6 +40,52 @@
           alt="Version Control System Illustration"
         />
       </div>
+      <div id="features">
+        <h1 class="nadpis">Features</h1>
+        <div class="flex-container">
+          <div id="box1">
+            <img
+              class="obrazok"
+              src="../images/Features1.png"
+              alt="Speed and efficiency"
+            />
+            <h1 class="featuresHeadline">Top speed and efficiency</h1>
+            <p class="featuresParagraph">
+              Years of existence combined with our great and active community of
+              programmers have made Git one of the fastest and best optimized
+              version control systems today.
+            </p>
+          </div>
+          <div id="box2">
+            <img
+              class="obrazok"
+              src="../images/Features2.png"
+              alt="Unique features"
+            />
+            <h1 class="featuresHeadline">Unique features</h1>
+            <p class="featuresParagraph">
+              Git outclasses SCM tools like Subversion, CVS, Perforce, and
+              ClearCase with its unique features like
+              <em>cheap local branching</em>, <em>convenient staging areas</em>,
+              and <em>multiple workflows</em>.
+            </p>
+          </div>
+          <div id="box3">
+            <img
+              class="obrazok"
+              src="../images/Features3.png"
+              alt="Easy Learning"
+            />
+            <h1 class="featuresHeadline">Easy to learn</h1>
+            <p class="featuresParagraph">
+              Thanks to the great popularity of Git, you will find many useful
+              tutorials. Some code editors even offer integrated commands in the
+              form of buttons to make your work with Git even easier.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div id="about"></div>
     </div>
   </body>
 </html>
