I added Who uses our project section.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div id="box1">
             <img
               class="obrazok"
-              src="../images/Features1.png"
+              src="./images/Features1.png"
               alt="Speed and efficiency"
             />
             <h1 class="featuresHeadline">Top speed and efficiency</h1>
@@ -59,7 +59,7 @@
           <div id="box2">
             <img
               class="obrazok"
-              src="../images/Features2.png"
+              src="./images/Features2.png"
               alt="Unique features"
             />
             <h1 class="featuresHeadline">Unique features</h1>
@@ -73,7 +73,7 @@
           <div id="box3">
             <img
               class="obrazok"
-              src="../images/Features3.png"
+              src="./images/Features3.png"
               alt="Easy Learning"
             />
             <h1 class="featuresHeadline">Easy to learn</h1>
@@ -84,8 +84,66 @@
             </p>
           </div>
         </div>
+        <h1 class="details"><a href="features.html">See feature details</a></h1>
       </div>
-      <div id="about"></div>
+      <div id="about">
+        <h1 class="nadpisA">About</h1>
+        <div class="flex-container">
+          <p class="paragraph">
+            <span>
+              Git is a <strong>free and open source</strong> distributed version
+              control system designed to handle everything from small to very
+              large projects with speed and efficiency. </span
+            ><br />
+            <br />
+            After many developers of the Linux kernel gave up access to
+            BitKeeper,
+            <strong>Linus Torvalds</strong>, the creator of Git, wanted a
+            distributed system that he could use like BitKeeper, but none of the
+            available free systems met his needs. So, he created one. The
+            development began in April 2005.<br />
+            <br />
+            On 26 July 2005 Torvalds turned over maintenance to
+            <strong>Junio Hamano</strong>, who was responsible for the 1.0
+            release on 21 December 2005 and remains the project's core
+            maintainer. <br />
+            <br />Up to now, there were
+            <strong>1,000,000+ repositories</strong> created with Git,
+            representing more than 70% of the market share.
+          </p>
+          <img src="./images/About.png" alt="Git Version Control System" />
+        </div>
+      </div>
+      <div id="companies">
+        <a href="https://github.com/google"
+          ><img src="./images/Google.png" alt="Google"
+        /></a>
+        <a
+          href="https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git"
+          ><img src="./images/Linux.png" alt="Linux"
+        /></a>
+        <a href="https://android-review.googlesource.com/q/status:open"
+          ><img src="./images/Android.png" alt="Android"
+        /></a>
+        <a href="https://github.com/twitter"
+          ><img src="./images/Twitter.png" alt="Twitter"
+        /></a>
+        <a href="https://github.com/netflix"
+          ><img src="./images/Netflix.png" alt="Netflix"
+        /></a>
+        <a href="https://github.com/linkedin"
+          ><img src="./images/LinkedIn.png" alt="LinkedIn"
+        /></a>
+        <a href="https://github.com/facebook"
+          ><img src="./images/Facebook.png" alt="Facebook"
+        /></a>
+        <a href="https://github.com/Microsoft"
+          ><img
+            style="padding-right: 0px"
+            src="./images/Microsoft.png"
+            alt="Microsoft"
+        /></a>
+      </div>
     </div>
   </body>
 </html>
