I fixed Companies and projects using git section.

--- a/index.html
+++ b/index.html
@@ -114,34 +114,44 @@
           <img src="./images/About.png" alt="Git Version Control System" />
         </div>
       </div>
-      <div id="companies">
-        <a href="https://github.com/google"
+    </div>
+
+    <div id="companies">
+      <div class="container">
+        <h1 class="nadpisC">Companies & Projects Using Git</h1>
+        <a
+          href="https://github.com/google"
+          target="_blank"
+          style="margin-left: 0px"
           ><img src="./images/Google.png" alt="Google"
         /></a>
         <a
           href="https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git"
+          target="_blank"
           ><img src="./images/Linux.png" alt="Linux"
         /></a>
-        <a href="https://android-review.googlesource.com/q/status:open"
+        <a
+          href="https://android-review.googlesource.com/q/status:open"
+          target="_blank"
           ><img src="./images/Android.png" alt="Android"
         /></a>
-        <a href="https://github.com/twitter"
+        <a href="https://github.com/twitter" target="_blank"
           ><img src="./images/Twitter.png" alt="Twitter"
         /></a>
-        <a href="https://github.com/netflix"
+        <a href="https://github.com/netflix" target="_blank"
           ><img src="./images/Netflix.png" alt="Netflix"
         /></a>
-        <a href="https://github.com/linkedin"
+        <a href="https://github.com/linkedin" target="_blank"
           ><img src="./images/LinkedIn.png" alt="LinkedIn"
         /></a>
-        <a href="https://github.com/facebook"
+        <a href="https://github.com/facebook" target="_blank"
           ><img src="./images/Facebook.png" alt="Facebook"
         /></a>
-        <a href="https://github.com/Microsoft"
-          ><img
-            style="padding-right: 0px"
-            src="./images/Microsoft.png"
-            alt="Microsoft"
+        <a
+          href="https://github.com/Microsoft"
+          target="_blank"
+          style="margin-right: 0px"
+          ><img src="./images/Microsoft.png" alt="Microsoft"
         /></a>
       </div>
     </div>
