I added download section.

--- a/index.html
+++ b/index.html
@@ -155,5 +155,45 @@
         /></a>
       </div>
     </div>
+
+    <div class="container">
+      <div id="download">
+        <h1 class="nadpisB">Download</h1>
+        <div class="flex-container">
+          <div id="textPart">
+            <h2 class="detail">Latest version: <strong>2.30.0</strong></h2>
+            <br />
+            <h4 class="lowerDetail">
+              What's new? Check out latest <a><u>Changelog</u></a> <br /><strong
+                >Github's source code</strong
+              >
+              is available
+              <a><u>here</u></a>
+              <br />
+              <br />
+            </h4>
+            <h1 class="tlacidlo">
+              <a href="features.html">Download .exe for Windows</a>
+            </h1>
+            <h1 class="tlacidlo">
+              <a href="features.html">Download binary for MacOS</a>
+            </h1>
+            <h3 class="poznamka">
+              <strong
+                >Are you looking for older an version or a Linux
+                installation?</strong
+              >
+              Everything's available <u>here</u>.
+            </h3>
+          </div>
+
+          <img
+            style="margin-top: -165px"
+            src="./images/Download.png"
+            alt="Download Git"
+          />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
