I added citation section.

--- a/index.html
+++ b/index.html
@@ -173,27 +173,35 @@
               <br />
             </h4>
             <h1 class="tlacidlo">
-              <a href="features.html">Download .exe for Windows</a>
+              <a href="features.html">Download latest .exe for Windows</a>
             </h1>
             <h1 class="tlacidlo">
-              <a href="features.html">Download binary for MacOS</a>
+              <a href="features.html">Download latest binary for MacOS</a>
             </h1>
             <h3 class="poznamka">
               <strong
-                >Are you looking for older an version or a Linux
-                installation?</strong
+                >Are you looking for an older version or Linux
+                distribution?</strong
               >
               Everything's available <u>here</u>.
             </h3>
           </div>
 
           <img
-            style="margin-top: -165px"
+            style="margin-top: -166px"
             src="./images/Download.png"
             alt="Download Git"
           />
         </div>
       </div>
+      <div id="citation">
+        <h1 class="nadpisA">
+          "Every developer should use GIT in his projects."<br /><small
+            >Ludwig C, Project manager</small
+          >
+        </h1>
+      </div>
+      <div id="references"></div>
     </div>
   </body>
 </html>
