I added references and footer.

--- a/index.html
+++ b/index.html
@@ -201,7 +201,47 @@
           >
         </h1>
       </div>
-      <div id="references"></div>
+      <div id="references">
+        <div class="flex-container">
+          <div class="refBox">
+            <img class="que" src="./images/Shape.png" alt="Citation" />
+            <p>
+              I love Git because it's a great way to keep track of changes on
+              your projects. You can install and run it directly from your
+              terminal allowing you to pull a project, update it, and push it
+              back to it's repository for others to make edits.
+            </p>
+            <h5>Victor G, Senior Analyst</h5>
+          </div>
+          <div class="refBox">
+            <img class="que" src="./images/Shape.png" alt="Citation" />
+            <p>
+              I love Git, my favorite thing about it, is that I'm able to upload
+              files to our repository and make changes to our source codes
+              straight from the terminal. This really makes it easy as I don't
+              have to log into an FTP Server and manually upload files.
+            </p>
+            <h5>Collin R, Fullstack Developer</h5>
+          </div>
+
+          <div class="refBox">
+            <img class="que" src="./images/Shape.png" alt="Citation" />
+            <p>
+              This VCS helps me effectively manage my repositories and
+              collaborate with other developers on platforms like Github to
+              better the projects. Git also helps me manage branches within my
+              repository so that I can work on changes individually.
+            </p>
+            <h5>Shivam S, Lead Software Engineer</h5>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="footer">
+      <h6>
+        Git is a member of <a>Software Freedom Conservancy</a><br /><br />
+        2021, Powered by Branislav Mateáš
+      </h6>
     </div>
   </body>
 </html>
