I added basic download page.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Git</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap"
@@ -16,10 +16,13 @@
         <div class="menu">
           <img id="logo" src="./images/logo.png" alt="Git Logo" />
           <ul>
+            <li>
+              <a><strong>Home</strong></a>
+            </li>
             <li><a>Why Git?</a></li>
             <li><a>About</a></li>
             <li><a>References</a></li>
-            <li class="down"><a>Download</a></li>
+            <li class="down"><a href="./download.html">Download</a></li>
           </ul>
         </div>
 
