I make links work in index.html.

--- a/download.html
+++ b/download.html
@@ -1,6 +1,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Git - the best Version Control System on the planet"
+    />
+    <meta name="keywords" content="Free VCS, Git, Version Control System" />
+    <meta name="author" content="Branislav Mateáš" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Download - Git</title>
     <link rel="icon" href="./images/icon.png" size="64x64" />
@@ -12,23 +18,29 @@
     <link rel="stylesheet" href="./css/myStyles.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="hero">
-        <div class="menu">
-          <img id="logo" src="./images/logo.png" alt="Git Logo" />
+    <div class="hero">
+      <div class="menu">
+        <div class="container1">
+          <a href="./index.html"
+            ><img id="logo" src="./images/logo.png" alt="Git Logo"
+          /></a>
           <ul>
             <li>
-              <a>Home</a>
+              <a href="./index.html">Home</a>
             </li>
 
             <li><a>Why Git?</a></li>
             <li><a>About</a></li>
             <li><a>References</a></li>
-            <li class="down"><a href="./download.html">Download</a></li>
+            <li class="down">
+              <a href="./download.html"><u>Download</u></a>
+            </li>
           </ul>
         </div>
       </div>
+    </div>
 
+    <div class="container">
       <div id="pageTitle">
         <h1>
           Download<br /><small>(2.30.0) - </small
