I finished features page.

--- a/download.html
+++ b/download.html
@@ -28,8 +28,7 @@
             <li>
               <a href="./index.html">Home</a>
             </li>
-
-            <li><a>Why Git?</a></li>
+            <li><a href="./features.html">Features</a></li>
             <li><a>About</a></li>
             <li><a>References</a></li>
             <li class="down">
@@ -40,7 +39,7 @@
       </div>
     </div>
 
-    <div class="container">
+    <div class="container1">
       <div id="pageTitle">
         <h1>
           Download<br /><small>(2.30.0) - </small
@@ -81,6 +80,7 @@
       </div>
       <div id="windows">
         <h1 class="nadpisA">Windows</h1>
+        <img src="./images/Win_black.png" class="os" />
         <p>
           <strong>Git for Windows Setup</strong>
           <br />
@@ -112,6 +112,7 @@
       </div>
       <div id="macOS">
         <h1 class="nadpisA">MacOS</h1>
+        <img src="./images/Mac_black.png" class="os" />
         <p>
           There are several options for installing Git on macOS. Note that any
           non-source distributions are provided by third parties, and may not be
@@ -164,6 +165,7 @@
       </div>
       <div id="linux">
         <h1 class="nadpisA">Linux</h1>
+        <img src="./images/Linux_black.png" class="os" />
         <p>
           It is easiest to install Git on Linux using the preferred package
           manager of your Linux distribution. If you prefer to build from
