--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <a href="./index.html"><strong><u>Home</u></strong></a
               >
             </li>
-            <li><a>Why Git?</a></li>
+            <li><a href="./features.html">Features</a></li>
             <li><a>About</a></li>
             <li><a>References</a></li>
             <li class="down"><a href="./download.html">Download</a></li>
@@ -96,7 +96,7 @@
             </p>
           </div>
         </div>
-        <h1 class="details"><a href="features.html">See feature details</a></h1>
+        <h1 class="details"><a href="features.html">See more and detailed features</a></h1>
       </div>
       <div id="about">
         <h1 class="nadpisA">About</h1>
@@ -167,7 +167,6 @@
         /></a>
       </div>
     </div>
-
     <div class="container">
       <div id="download">
         <h1 class="nadpisB">Download</h1>
