I added documentation page.

--- a/download.html
+++ b/download.html
@@ -29,8 +29,7 @@
               <a href="./index.html">Home</a>
             </li>
             <li><a href="./features.html">Features</a></li>
-            <li><a>About</a></li>
-            <li><a>References</a></li>
+            <li><a href="./cheatsheet.html">Documentation</a></li>
             <li class="down">
               <a href="./download.html"><u>Download</u></a>
             </li>
