--- a/features.html
+++ b/features.html
@@ -33,8 +33,7 @@
                 ><u><strong>Features</strong></u></a
               >
             </li>
-            <li><a>About</a></li>
-            <li><a>References</a></li>
+            <li><a href="./cheatsheet.html">Documentation</a></li>
             <li class="down">
               <a href="./download.html">Download</a>
             </li>
