--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
               >
             </li>
             <li><a href="./features.html">Features</a></li>
-            <li><a>About</a></li>
-            <li><a>References</a></li>
+            <li><a href="./cheatsheet.html">Documentation</a></li>
             <li class="down"><a href="./download.html">Download</a></li>
           </ul>
         </div>
@@ -99,7 +98,7 @@
         <h1 class="details"><a href="features.html">See more and detailed features</a></h1>
       </div>
       <div id="about">
-        <h1 class="nadpisA">About</h1>
+        <h1 class="nadpisD">About</h1>
         <div class="flex-container">
           <p class="paragraph">
             <span>
@@ -208,7 +207,7 @@
         </div>
       </div>
       <div id="citation">
-        <h1 class="nadpisA">
+        <h1 class="nadpisD">
           "Every developer should use GIT in his projects."<br /><small
             >Ludwig C, Project manager</small
           >
